--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-architect 
+title : welcome to cleaning bug page
+description : feel free to bookmark this page for your convenience 
